testsuite/tests/indexed-types/should_fail/T8368.hs
{-# LANGUAGE TypeFamilies, GADTs #-}

module T8368 where

data Foo = Bar

data family Fam a
data instance Fam a where
  MkFam :: Foo
  