testsuite/tests/indexed-types/should_fail/T8368.stderr

T8368.hs:9:3: error:
    • Couldn't match expected type ‘Fam a0’ with actual type ‘Foo’
    • In the result type of data constructor ‘MkFam’
      In the data instance declaration for ‘Fam’
